# smt-reproduce

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  shared_folds_k5.json
ablations/grackle/: machsmt_portfolio_trainer.py
ablations/machsmt/: ablation_harness.py
ablations/medley/: ablation_harness.py
conf/: config.yaml
conf/featuriser/: aig.yaml  ast_path.yaml  ast_path_len10.yaml  ast_path_len20.yaml  ast_path_len5.yaml  clause_hypergraph.yaml  community.yaml  community_modularity_only.yaml  community_spectral.yaml  contrastive_embed.yaml  contrastive_embed_supervised_only.yaml  dynamic_probes.yaml  dynamic_probes_05s.yaml  dynamic_probes_1s.yaml  dynamic_probes_2s.yaml  dynamic_probes_5s.yaml  entropy.yaml  entropy_no_mi.yaml  formula2vec.yaml  hash_kernel.yaml  hypergraph_features.yaml  lcg.yaml  lcg_star.yaml  lig.yaml  llm_embed.yaml  llm_embed_finetuned.yaml  machsmt_162.yaml  neuroback.yaml  proof_complexity.yaml  random_walk_kernel.yaml  sibyl_ast_ud.yaml  smt_dag.yaml  spectral.yaml  static_expanded.yaml  static_expanded_k10.yaml  static_expanded_k100.yaml  static_expanded_k50.yaml  static_expanded_pca_only.yaml  static_expanded_poly_only.yaml  static_light_bow.yaml  (+22 more)
conf/model/: adaboost_ehm.yaml  autofolio.yaml  collaborative_filtering.yaml  conformal.yaml  contextual_bandits.yaml  (+29 more)
pipeline/: __init__.py  __main__.py  compose.py  db.py  evaluate.py  runner.py  types.py  validate.py
scripts/: launch_sweep.py
tests/: conftest.py  test_cards.py  test_cli.py  test_compose.py  test_db.py  test_evaluate.py  test_types.py  test_validate.py
(+1356 files in other folders)
