[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smt-reproduce"
version = "0.1.0"
description = "Reproducibility CLI for SMT Algorithm Selection Dissertation"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
train = [
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "lightgbm>=4.0",
    "pydantic>=2.7",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
]
gpu = [
    "torch>=2.0",
    "torch_geometric>=2.6",
]
all = ["smt-reproduce[train,gpu]"]

[project.scripts]
smt = "smt.cli:smt"

[tool.setuptools.packages.find]
where = ["src"]
